[package]
name = "hematite_server"
version = "0.0.1"
authors = [
    "Fenhl <fenhl@fenhl.net>",
    "Carlos Cobo <toqueteos@gmail.com>"
]

[[bin]]
name = "hematite_server"
path = "server/main.rs"
doc = false
test = false
bench = false

[lib]
name = "hematite_server"
path = "src/lib.rs"

[dependencies]
byteorder = "0.4"
flate2 = "0.2"
hematite-nbt = "0.1"
log = "0.3"
num = "0.1"
openssl = "0.7.5"
rand = "0.3"
regex = "0.1"
rustc-serialize = "0.3"
time = "0.1"
uuid = "0.1"
