[package]
name = "hematite_server"
version = "0.1.0"
authors = [
    "Fenhl <fenhl@fenhl.net>",
    "Carlos Cobo <toqueteos@gmail.com>"
]
license = "MIT"
keywords = ["hematite", "minecraft", "server", "piston"]
description = "A Minecraft server clone"
repository = "https://github.com/PistonDevelopers/hematite_server"
homepage = "http://hematite.piston.rs/"

[[bin]]
name = "hematite_server"
path = "server/main.rs"
doc = false
test = false
bench = false

[lib]
name = "hematite_server"
path = "src/lib.rs"

[dependencies]
byteorder = "1.0.0"
flate2 = "0.2"
hematite-nbt = "0.3"
log = "0.4"
num = "0.2"
rand = "0.5.5"
regex = "0.1"
rustc-serialize = "0.3"
time = "0.1"
uuid = "0.1"
