[package]
name = "hematite_server"
version = "0.1.0"
authors = [
    "Fenhl <fenhl@fenhl.net>",
    "Carlos Cobo <toqueteos@gmail.com>"
]
license = "MIT"
edition = "2018"
keywords = ["hematite", "minecraft", "server", "piston"]
description = "A Minecraft server clone"
repository = "https://github.com/PistonDevelopers/hematite_server"
homepage = "http://hematite.piston.rs/"

[[bin]]
name = "hematite_server"
path = "server/main.rs"
doc = false
test = false
bench = false

[lib]
name = "hematite_server"
path = "src/lib.rs"

[dependencies]
byteorder = "1.4.3"
flate2 = "1.0"
hematite-nbt = "0.3"
log = "0.4"
num = "0.4"
rand = "0.8.4"
regex = "0.1"
rustc-serialize = "0.3"
time = "0.1"
uuid = "0.1"
